Fixes to footer and support for dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+
+@media (prefers-color-scheme: dark) {
+  body {
+      color: #b0b0b0;
+      background-color: #101010;
+  }
+
+  .jumbotron {
+    color: #b0b0b0;
+    background-color: #303030;
+  }
+}
